tests/NormalTests/paczka2/big_fuzzy/47916487.err
Error in line 3: A^70 A938 99,5
Error in line 4: xnvGqRP S41 90,49
Error in line 5: jjZ A270 98,6
Error in line 7: TrRgN09 A270 67,6
Error in line 15: xnvGqRP A270 54,1
Error in line 25: xnvGqRP S41 83,2
Error in line 26: ddqpI7E A270 53,0
Error in line 28: ddqpI7E S283 54,5
Error in line 35: jjZ A270 25,04
Error in line 37: TrRgN09 S283 66,4
Error in line 6: A270 A938 36,8
Error in line 48: jjZ A938 65,00
Error in line 36: jjZ A270 75,4
Error in line 57: 		fS	ZcRNw S41 5	,8
Error in line 49: jjZ S41 54,6
Error in line 60: ddqpI7E S283 106,16
Error in line 62: ddqpI7E S41 83,8
Error in line 73: ddqpI7E A938 149,3
Error in line 78: xnvGqRP A270 91,7
Error in line 64: 33fS3ZcRNw S41 167,3
Error in line 84: TrRgN09 A938 101,9
Error in line 89: TrRgN09 S41 47,2
Error in line 91: TrRgN09 A270 20,1
Error in line 95: xnvGqRP S41 244,44
Error in line 92: xnvGqRP S41 77,6
Error in line 100: xnvGqRP A938 10,0
Error in line 106: jjZ S283 70,9
Error in line 107: jjZ A270 35,9
Error in line 115: TrRgN09 S41 85,6
Error in line 113: 33fS3ZcRNw S283 25,8
Error in line 121: 33fS3ZcRNw A270 60,6
Error in line 128: xnvGqRP A938 30,1
Error in line 142: TrRgN09 S283 17,3
Error in line 141: ddqpI7E A938 64,0
Error in line 150: ddqpI7E A270 41,3
Error in line 152: ddqpI7E S41 83,6
Error in line 145: A270 S41 80,2
Error in line 168: fu6 S283 75,9
Error in line 173: xnvGqRP A270 83,0
Error in line 174: xnvGqRP A938 88,9
Error in line 178: TrRgN09 A270 50,5
Error in line 169: fu6 S41 28,1
Error in line 180: TrRgN09 S283 86,2
Error in line 175: A270 S41 89,1
Error in line 196: jjZ A938 57,79
Error in line 188: A270 A938 53,4
Error in line 197: A270 S41 38,1
Error in line 193: ddqpI7E S41 0,4
Error in line 223: xnvGqRP A938 -2,4
Error in line 228: ddqpI7E S41 72,8
Error in line 220: jjZ S41 53,9
Error in line 229: ddqpI7E A270 13,6
Error in line 231: jjZ S283 66,0
Error in line 238: xnvGqRP A270 26,86
Error in line 232: ddqpI7E A938 20,9
Error in line 246: ddqpI7E A270 51,1
Error in line 244: jjZ A938 20,5
